@@ -27,6 +27,7 @@ import org.apache.lucene.util.Constants;
 import org.apache.lucene.util.LuceneTestCase;
 import org.apache.lucene.util.QuickPatchThreadsFilter;
 import org.apache.noggit.*;
+import org.apache.solr.client.solrj.util.ClientUtils;
 import org.apache.solr.common.*;
 import org.apache.solr.common.cloud.SolrZkClient;
 import org.apache.solr.common.params.*;
@@ -667,14 +668,15 @@ public abstract class SolrTestCaseJ4 extends LuceneTestCase {
    * Generates a simple &lt;add&gt;&lt;doc&gt;... XML String with no options
    */
   public static String adoc(SolrInputDocument sdoc) {
-    List<String> fields = new ArrayList<String>();
-    for (SolrInputField sf : sdoc) {
-      for (Object o : sf.getValues()) {
-        fields.add(sf.getName());
-        fields.add(o.toString());
-      }
+    StringWriter out = new StringWriter(512);
+    try {
+      out.append("<add>");
+      ClientUtils.writeXML(sdoc, out);
+      out.append("</add>");
+    } catch (IOException e) {
+      throw new RuntimeException("Inexplicable IO error from StringWriter", e);
     }
-    return adoc(fields.toArray(new String[fields.size()]));
+    return out.toString();
   }
 
 
